--- a/Places/peru.html
+++ b/Places/peru.html
@@ -143,7 +143,7 @@
         </article>
       </main>
 
-      <a href="visit.html" class="nav-button back-button">Go Back</a>
+      <a href="#top" class="nav-button back-button">Go Top</a>
       <button
         class="nav-button top-button"
         id="topButton"
@@ -151,24 +151,5 @@
       >
         Go to Top
       </button>
-
-    <script>
-      const topButton = document.getElementById("topButton");
-
-      window.addEventListener("scroll", () => {
-        if (window.scrollY > 500) {
-          topButton.classList.add("show");
-        } else {
-          topButton.classList.remove("show");
-        }
-      });
-
-      function scrollToTop() {
-        window.scrollTo({
-          top: 0,
-          behavior: "smooth",
-        });
-      }
-    </script>
   </body>
 </html>
