--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -64,15 +64,15 @@
       </div>
 
       <div class="section">
-        <h2>Educational Attainment</h2>
-        <ol>
-          <li>Elementary, The Lord is my Sheperd, 2016</li>
-          <li>
-            Highschool, Don Antonio De Zuzuaregei Sr. Memorial Academy, 2020
-          </li>
-          <li>Senior Highschool, Our Lady of Fatima University, 2022</li>
-        </ol>
-      </div>
+<h2>Educational Attainment</h2>
+<ol>
+  <li>Elementary, The Lord is my Shepherd, 2016</li>
+  <li>High School, Don Antonio De Zuzuaregei Sr. Memorial Academy, 2020</li>
+  <li>Senior High School, Our Lady of Fatima University, 2022</li>
+  <li>College, University of the East (Currently studying)</li>
+</ol>
+</div>
+
 
       <div class="section">
         <h2>Skills, Training, Seminars Attended</h2>
