--- a/Skills/Skills.html
+++ b/Skills/Skills.html
@@ -37,62 +37,11 @@
       <main>
         <section id="skills" class="content-section">
           <h3 class="underline">Skills</h3>
-          <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ang unang skill na meron ako ay communication.<sup>1</sup> Mahalaga
-            ito sa buhay kasi ito ang gamit natin para makipag-usap,
-            makipag-connect sa iba, at maipahayag ang sarili natin nang
-            maayos.<sup>2</sup> Pakiramdam ko, karamihan sa atin ay may ganitong
-            skill, pero nagkakaiba lang sa level ng confidence at clarity sa
-            pagsasalita.<sup>3</sup>Sunod naman ay patience—importante ito dahil
-            natutulungan tayo nitong maging kalmado, gumawa ng mas maayos na
-            desisyon, at harapin ang mga challenges nang mas epektibo.<sup
-              >4</sup
-            >
-            Hindi lahat ng bagay nakukuha agad, kaya malaking tulong ang
-            pagiging matiyaga lalo na sa pag-aaral at buhay pangkalahatan.<sup
-              >5</sup
-            >
-            Madalas kong ginagamit ang patience lalo na kapag may mahihirap na
-            sitwasyon o may mga bagay na hindi ko agad makuha.<sup>6</sup> Next
-            is adaptability, isang skill na tumutulong sa atin na matuto ng mga
-            bagong bagay at mag-adjust sa iba't ibang sitwasyon.<sup>7</sup>
-            Pero minsan, may downside din ito, lalo na kung hindi natin
-            namamalayan na naa-adapt na natin ang hindi magagandang gawi ng
-            iba.<sup>8</sup> Depende talaga ito sa kung sino ang mga taong
-            nakakasama natin.<sup>9</sup> Para sa akin, importante ang pagiging
-            adaptable lalo na sa mabilis na pagbabago sa paligid.<sup>10</sup>I
-            think being open-minded is also one of my strengths.<sup>11</sup>
-            Mahalaga ito kasi natutulungan tayo nitong mag-grow, matuto ng
-            bagong perspectives, at makipag-build ng mas malalim na
-            relationships sa ibang tao.<sup>12</sup> Noong high school, proud
-            ako sa sarili ko dahil open-minded ako, at dahil dito, maraming tao
-            ang komportableng mag-open up sa akin.<sup>13</sup> Alam kong
-            malaking bagay ito lalo na sa pakikitungo sa iba't ibang klase ng
-            tao.<sup>14</sup> Another skill na meron ako ay active
-            listening.<sup>15</sup> Kapag marunong tayong makinig nang mabuti,
-            mas lumalalim ang relasyon natin sa ibang tao dahil nararamdaman
-            nilang pinapahalagahan at naiintindihan sila.<sup>16</sup> Malaking
-            bagay ito sa pag-iwas sa misunderstandings at miscommunication.<sup
-              >17</sup
-            >
-            Bukod pa doon, nakakatulong din ito sa problem-solving dahil mas
-            marami tayong nakukuhang insights, kaya mas nagiging maayos ang
-            ating mga sagot at solusyon sa mga sitwasyon.<sup>18</sup> Isa ito
-            sa mga skills na gusto kong mas mapalawak pa para mas maging
-            effective sa pakikisalamuha sa iba.<sup>19</sup>Lastly,
-            confidence—isa ito sa pinakamalaking bagay na nakakatulong sa
-            personal growth.<sup>20</sup> Kapag may tiwala tayo sa sarili natin,
-            mas nagiging madali ang pagharap sa mga challenges.<sup>21</sup>
-            Pinapataas nito ang self-esteem natin at tinutulungan tayong
-            mag-move forward kahit may mga setbacks.<sup>22</sup> Hindi ito
-            madaling ma-develop, pero mahalaga ito para sa pag-abot ng goals sa
-            buhay.<sup>23</sup> Para sa akin, malaking bagay ang confidence lalo
-            na sa school at sa social life.<sup>24</sup> Ang pagkakaroon ng
-            self-confidence ay nakakatulong hindi lang sa sarili kundi pati sa
-            pag-inspire sa iba.<sup>25</sup> Sa lahat ng skills na ito, alam
-            kong may mga dapat pa akong i-improve, pero masaya ako na may
-            ganitong strengths na makakatulong sa akin sa future.<sup>26</sup>
-          </p>
+         <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an Information Technology student, I have developed a range of technical and soft skills essential for both academic and professional growth. One of my key strengths is <b>communication</b>—I can express ideas clearly and work effectively in team environments, especially during group projects and presentations. I also value <b>patience</b> and <b>adaptability</b>, which help me handle challenges in coding, debugging, and learning new technologies efficiently.  
+    <br><br>
+    Another important skill I possess is <b>problem-solving</b>. I enjoy analyzing technical issues, exploring solutions, and applying logic to find the most efficient approach. My <b>active listening</b> and <b>collaboration skills</b> also allow me to contribute meaningfully to team-based projects and understand client or user needs better. Lastly, I continuously work on improving my <b>confidence</b>—especially when presenting my ideas or defending project outcomes—since I believe self-assurance plays a big role in professional success.
+  </p>
 
           <div class="image-gallery">
             <div class="gallery-item">
@@ -123,41 +72,10 @@
         <section id="hobbies" class="content-section">
           <h3 class="underline">Hobbies</h3>
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Isa sa mga hobbies ko ay ang paglalaro ng computer games o simpleng
-            paggamit ng computer.<sup>1</sup> Sobrang nahilig ako dito lalo na
-            kapag walang pasok, kaya minsan umaabot ako ng 6 to 8 hours sa
-            paglalaro.<sup>2</sup> Alam ko na hindi ito healthy, pero sabi nga,
-            nakakabaliw talaga ang addiction sa gaming.<sup>3</sup> Bukod sa
-            paglalaro, nahilig din ako sa pagluluto dahil na rin magagaling
-            magluto ang parents ko.<sup>4</sup> Lalo na ang lola ko, siya talaga
-            ang unang nagturo sa akin kung paano magluto.<sup>5</sup> Bata pa
-            lang ako, mahilig na akong manood sa kanila habang nagluluto sa
-            kusina.<sup>6</sup> Dahil doon, naisipan kong magpaturo sa kanila
-            noong elementary pa lang ako.<sup>7</sup> Isa pa sa hobbies ko ay
-            ang paglalaro ng basketball, pero bihira na lang ngayon.<sup>8</sup>
-            Mas naging busy na kasi ako sa college kaya minsan wala na rin akong
-            time maglaro.<sup>9</sup> Minsan naman, wala akong kalaro kasi busy
-            na rin mga kaibigan ko sa studies nila.<sup>10</sup> Naging hobby ko
-            rin ang video editing, lalo na noong Senior High School ako.<sup
-              >11</sup
-            >
-            Noong pandemic, madalas kailangan ng video para sa school
-            requirements.<sup>12</sup> Dahil doon, natuto akong mag-edit ng
-            videos at na-enjoy ko siya.<sup>13</sup> Isa pa sa naging hobby ko
-            ay ang crochet, lalo na noong nagkaroon ako ng girlfriend.<sup
-              >14</sup
-            >
-            Siya mismo ang nagturo sa akin kung paano gawin ang crochet
-            projects.<sup>15</sup> Naging bonding moment na rin namin ang
-            paggawa ng crochet items.<sup>16</sup> Mahilig din ako sa
-            photography, lalo na dahil sa kapatid kong mahilig
-            magpa-picture.<sup>17</sup> Kaya naman, tinutukan ko na rin ang
-            photography at in-improve ang skills ko.<sup>18</sup> Gusto ko rin
-            kumuha ng pictures ng mga lugar na hindi ko pa napupuntahan.<sup
-              >19</sup
-            >
-            Para na rin may memories akong mababalikan sa future.<sup>20</sup>
-          </p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I enjoy activities that help me relax while still improving my creativity and technical knowledge. I like <b>playing computer games</b>, particularly strategy and team-based games, as they enhance my decision-making and teamwork skills. I also enjoy <b>video editing</b> and <b>graphic design</b>, which I started exploring during senior high school and now use for school projects and social media content.  
+    <br><br>
+    Aside from digital hobbies, I like <b>cooking</b> and <b>photography</b>—both allow me to express creativity and patience. Photography, in particular, helps me appreciate visual composition, which connects well with my interest in web and UI design. Occasionally, I also play <b>basketball</b> to stay active and balanced despite my busy schedule as a college student.
+  </p>
 
           <div class="image-gallery">
             <div class="gallery-item">
@@ -188,48 +106,10 @@
         <section id="interests" class="content-section">
           <h3 class="underline">Interests</h3>
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Isa sa mga interests ko ay paglalaro ng computer games.<sup>1</sup>
-            Mahilig ako sa iba't ibang klase ng games, lalo na yung may strategy
-            at teamwork, kasi natututo akong mag-isip nang mabilis at
-            makipag-coordinate sa iba.<sup>2</sup> Bukod sa pagiging libangan,
-            nakikita ko rin itong paraan para ma-relax at pansamantalang
-            makalimot sa stress ng school.<sup>3</sup> Isa pa sa mga interests
-            ko ay pagluluto.<sup>4</sup> Bata pa lang ako, mahilig na akong
-            manood sa lola at parents ko habang nagluluto, kaya natutunan ko rin
-            ito.<sup>5</sup> Masaya ako kapag may bagong recipe akong
-            sinusubukan, lalo na kapag nagugustuhan ito ng mga kakilala ko.<sup
-              >6</sup
-            >
-            Photography rin ang isa sa mga kinahihiligan ko, lalo na ang pagkuha
-            ng pictures ng magagandang tanawin at moments kasama ang mga
-            kaibigan at pamilya.<sup>7</sup> Nagsimula akong mahilig sa
-            photography dahil sa kapatid ko na mahilig magpa-picture, kaya
-            na-inspire akong pagbutihin ito.<sup>8</sup> Isa rin sa mga
-            interests ko ang pagkanta, kahit na hindi kagandahan ang boses ko,
-            walang makakapigil sa akin sa pagkanta.<sup>9</sup> Para sa akin,
-            singing is a way to express emotions and enjoy the
-            moment.<sup>10</sup>Pagtugtog ng gitara ay isa rin sa mga interes
-            ko, lalo na noong pandemic kung saan naging libangan ko ito habang
-            nasa bahay lang.<sup>11</sup> Nakakatanggal ng stress ang pagtugtog,
-            at masarap sa pakiramdam kapag natututo ako ng bagong
-            kanta.<sup>12</sup>Social media is also one of my interests, lalo na
-            sa panahon ngayon na halos lahat ng tao ay online.<sup>13</sup> Para
-            sa akin, ang social media ay isang paraan para magpalipas ng oras,
-            lalo na kapag wala akong ginagawa o gusto ko lang
-            magpa-antok.<sup>14</sup>Isa rin sa mga hilig ko ang live streaming,
-            lalo na sa paglalaro ng games sa Facebook.<sup>15</sup> Dito ko
-            pinapakita ang skills ko sa paglalaro at kung gaano ako ka-hype
-            kapag naglalaro.<sup>16</sup> Masaya akong mag-share ng gaming
-            moments ko sa iba, lalo na kapag may nanonood at nakiki-engage sa
-            stream ko.<sup>17</sup>Reading is also one of my interests,
-            particularly manhwa.<sup>18</sup> Mahilig akong magbasa ng manhwa
-            dahil para itong comic toon pero mas detailed at engaging ang
-            storytelling.<sup>19</sup> Nakakaaliw ito at minsan nakakawala ng
-            stress, lalo na kapag maganda ang plot at animation ng
-            kwento.<sup>20</sup>Sa lahat ng interests ko, masasabi kong mahilig
-            ako sa mga bagay na nagbibigay ng entertainment at learning, kaya
-            patuloy kong ini-explore ang mga ito.<sup>21</sup>
-          </p>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My interests revolve around technology, creativity, and continuous learning. I’m passionate about <b>web development</b>, <b>software design</b>, and <b>IT innovations</b> that solve real-world problems. I also enjoy <b>photography</b> and <b>digital arts</b>, which inspire me to build visually appealing user interfaces and creative multimedia projects.  
+    <br><br>
+    I’m also interested in <b>cybersecurity</b> and <b>network systems</b>, as I believe data protection and online safety are crucial in today’s world. Aside from tech-related fields, I love <b>reading manhwa</b> and <b>watching tech tutorials</b> online to learn new skills in a fun and engaging way. These interests motivate me to keep exploring and improving my craft as a future IT professional.
+  </p>
 
           <div class="image-gallery">
             <div class="gallery-item">
