--- a/Skills/Skills.html
+++ b/Skills/Skills.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SKILLS, HOBBIES & INTEREST</title>
+    <title>Skills, Hobbies & Interests</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header class="site-header">
       <div class="header-content">
@@ -17,50 +18,130 @@
         <nav class="main-navigation">
           <a href="../homepage/homepage.html" class="nav-link">Home</a>
           <a href="../Resume/Resume.html" class="nav-link">Resume</a>
-          <a href="../Skills/Skills.html" class="nav-link">Skills</a>
+          <a href="../Skills/Skills.html" class="nav-link active">Skills</a>
           <a href="../Contact/contact.html" class="nav-link">Contact</a>
         </nav>
-        <button class="menu-toggle" aria-label="Toggle menu">
-          <i class="ti ti-menu-2"></i>
-        </button>
       </div>
     </header>
 
     <nav class="navigation">
-      <a href="../homepage/homepage.html" class="nav-button">Home</a>
       <a href="#skills" class="nav-button">Skills</a>
       <a href="#hobbies" class="nav-button">Hobbies</a>
       <a href="#interests" class="nav-button">Interests</a>
     </nav>
 
     <main>
+      <!-- SKILLS SECTION -->
       <section id="skills" class="content-section">
         <h3 class="underline">Skills</h3>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an Information Technology student, I have developed a range of technical and soft skills essential for both academic and professional growth. One of my key strengths is <b>communication</b>—I can express ideas clearly and work effectively in team environments, especially during group projects and presentations. I also value <b>patience</b> and <b>adaptability</b>, which help me handle challenges in coding, debugging, and learning new technologies efficiently.  
-          <br><br>
-          Another important skill I possess is <b>problem-solving</b>. I enjoy analyzing technical issues, exploring solutions, and applying logic to find the most efficient approach. My <b>active listening</b> and <b>collaboration skills</b> also allow me to contribute meaningfully to team-based projects and understand client or user needs better. Lastly, I continuously work on improving my <b>confidence</b>—especially when presenting my ideas or defending project outcomes—since I believe self-assurance plays a big role in professional success.
+          As an Information Technology student, I have developed a range of
+          technical and soft skills essential for both academic and professional
+          growth. One of my key strengths is <b>communication</b>—I can express
+          ideas clearly and work effectively in team environments, especially
+          during group projects and presentations. I also value
+          <b>patience</b> and <b>adaptability</b>, which help me handle
+          challenges in coding, debugging, and learning new technologies
+          efficiently.
         </p>
-        <a href="#top" class="top-button">Go Top</a>
+        <p>
+          Another important skill I possess is <b>problem-solving</b>. I enjoy
+          analyzing technical issues, exploring solutions, and applying logic to
+          find the most efficient approach. My <b>active listening</b> and
+          <b>collaboration skills</b> also allow me to contribute meaningfully to
+          team-based projects and understand client or user needs better.
+          Lastly, I continuously work on improving my <b>confidence</b>—especially
+          when presenting my ideas or defending project outcomes—since I believe
+          self-assurance plays a big role in professional success.
+        </p>
+
+        <div class="image-gallery">
+          <div class="gallery-item">
+            <img src="../photos/s1.jpg" alt="Communication Skills" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/s2.jpg" alt="Patience Skills" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/s3.jpg" alt="Adaptability Skills" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/s4.jpg" alt="Confidence Skills" />
+          </div>
+        </div>
       </section>
 
+      <!-- HOBBIES SECTION -->
       <section id="hobbies" class="content-section">
         <h3 class="underline">Hobbies</h3>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I enjoy activities that help me relax while still improving my creativity and technical knowledge. I like <b>playing computer games</b>, particularly strategy and team-based games, as they enhance my decision-making and teamwork skills. I also enjoy <b>video editing</b> and <b>graphic design</b>, which I started exploring during senior high school and now use for school projects and social media content.  
-          <br><br>
-          Aside from digital hobbies, I like <b>cooking</b> and <b>photography</b>—both allow me to express creativity and patience. Photography, in particular, helps me appreciate visual composition, which connects well with my interest in web and UI design. Occasionally, I also play <b>basketball</b> to stay active and balanced despite my busy schedule as a college student.
+          In my free time, I enjoy activities that help me relax while still
+          improving my creativity and technical knowledge. I like
+          <b>playing computer games</b>, particularly strategy and team-based
+          games, as they enhance my decision-making and teamwork skills. I also
+          enjoy <b>video editing</b> and <b>graphic design</b>, which I started
+          exploring during senior high school and now use for school projects
+          and social media content.
         </p>
-        <a href="#top" class="top-button">Go Top</a>
+        <p>
+          Aside from digital hobbies, I like <b>cooking</b> and
+          <b>photography</b>—both allow me to express creativity and patience.
+          Photography, in particular, helps me appreciate visual composition,
+          which connects well with my interest in web and UI design.
+          Occasionally, I also play <b>basketball</b> to stay active and balanced
+          despite my busy schedule as a college student.
+        </p>
+
+        <div class="image-gallery">
+          <div class="gallery-item">
+            <img src="../photos/i1.jpg" alt="Gaming Hobby" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/i2.jpg" alt="Cooking Hobby" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/i3.jpg" alt="Basketball Hobby" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/i4.jpg" alt="Video Editing Hobby" />
+          </div>
+        </div>
       </section>
 
+      <!-- INTERESTS SECTION -->
       <section id="interests" class="content-section">
         <h3 class="underline">Interests</h3>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My interests revolve around technology, creativity, and continuous learning. I’m passionate about <b>web development</b>, <b>software design</b>, and <b>IT innovations</b> that solve real-world problems. I also enjoy <b>photography</b> and <b>digital arts</b>, which inspire me to build visually appealing user interfaces and creative multimedia projects.  
-          <br><br>
-          I’m also interested in <b>cybersecurity</b> and <b>network systems</b>, as I believe data protection and online safety are crucial in today’s world. Aside from tech-related fields, I love <b>reading manhwa</b> and <b>watching tech tutorials</b> online to learn new skills in a fun and engaging way. These interests motivate me to keep exploring and improving my craft as a future IT professional.
+          My interests revolve around technology, creativity, and continuous
+          learning. I’m passionate about <b>web development</b>,
+          <b>software design</b>, and <b>IT innovations</b> that solve
+          real-world problems. I also enjoy <b>photography</b> and
+          <b>digital arts</b>, which inspire me to build visually appealing user
+          interfaces and creative multimedia projects.
         </p>
+        <p>
+          I’m also interested in <b>cybersecurity</b> and
+          <b>network systems</b>, as I believe data protection and online safety
+          are crucial in today’s world. Aside from tech-related fields, I love
+          <b>reading manhwa</b> and <b>watching tech tutorials</b> online to
+          learn new skills in a fun and engaging way. These interests motivate me
+          to keep exploring and improving my craft as a future IT professional.
+        </p>
+
+        <div class="image-gallery">
+          <div class="gallery-item">
+            <img src="../photos/ho1.jpg" alt="Strategy Games Interest" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/ho2.jpg" alt="Singing Interest" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/ho3.jpg" alt="Guitar Interest" />
+          </div>
+          <div class="gallery-item">
+            <img src="../photos/ho4.jpg" alt="Social Media Interest" />
+          </div>
+        </div>
       </section>
     </main>
 
