--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -10,36 +10,46 @@
     <div class="container">
       <div class="header">
         <div class="profile-picture">
-          <img
-            src="2x2_imresizer.jpg"
-            alt="Profile Picture"
-          />
+          <img src="2x2_imresizer.jpg" alt="Profile Picture" />
         </div>
         <div class="header-content">
           <h1>Valencia, Yancy Jarell D.</h1>
           <div class="contact-info">
             <p>09763866616 | Valencia.YancyJarell@ue.edu.ph</p>
+            <p>LinkedIn: linkedin.com/in/yancyvalencia | GitHub: github.com/yancyvalencia</p>
           </div>
         </div>
       </div>
 
-      <div class="about-me">
+      <div class="section">
+        <h2>Career Objective</h2>
         <p>
-          I am a highly motivated and detail-oriented individual with a passion.
-          I am eager to contribute my skills and knowledge to a challenging and
-          rewarding role at University of the East. I have a strong foundation
-          in Programming and am constantly seeking opportunities to learn and
-          grow.
+          To obtain a position or internship in the field of Information Technology
+          where I can apply my technical knowledge, problem-solving skills, and passion
+          for innovation. I aim to contribute to a forward-thinking organization while
+          gaining hands-on experience that enhances my professional growth and technical expertise.
+        </p>
+      </div>
+
+      <div class="section">
+        <h2>About Me</h2>
+        <p>
+          I am a highly motivated and detail-oriented BS Information Technology student at the
+          University of the East. I am passionate about programming, web development, and
+          creative problem-solving. I continuously seek opportunities to expand my technical
+          skills and apply them to real-world projects that make an impact.
         </p>
       </div>
 
       <div class="section">
         <h2>Technical IT Skills</h2>
         <ul class="skills-list">
-          <li>HTML</li>
-          <li>CSS</li>
+          <li>HTML / CSS / JavaScript</li>
           <li>Java</li>
           <li>Python</li>
+          <li>Database Management (MySQL)</li>
+          <li>Basic Networking</li>
+          <li>UI/UX Design (Figma, Canva)</li>
         </ul>
       </div>
 
@@ -47,58 +57,98 @@
         <h2>Work Experience</h2>
         <ol>
           <li>
-            Crew Member, McDonald's, May 2022
+            Crew Member, McDonald's — May 2022
             <ul>
               <li>
-                Prepared food orders quickly and accurately, following
-                established procedures and recipes.
+                Prepared food orders quickly and accurately, following established procedures.
               </li>
               <li>
-                Maintained a clean and organized work environment, including
-                food preparation areas, dining areas, and restrooms.
+                Maintained cleanliness and organization in all work areas.
               </li>
-              <li>Stocked supplies and ensured adequate inventory levels.</li>
+              <li>
+                Ensured customer satisfaction through quality service and teamwork.
+              </li>
             </ul>
           </li>
         </ol>
       </div>
 
       <div class="section">
-<h2>Educational Attainment</h2>
-<ol>
-  <li>Elementary, The Lord is my Shepherd, 2016</li>
-  <li>High School, Don Antonio De Zuzuaregei Sr. Memorial Academy, 2020</li>
-  <li>Senior High School, Our Lady of Fatima University, 2022</li>
-  <li>College, University of the East (Currently studying)</li>
-</ol>
-</div>
-
+        <h2>Educational Attainment</h2>
+        <ol>
+          <li>Elementary, The Lord is My Shepherd, 2016</li>
+          <li>High School, Don Antonio De Zuzuaregei Sr. Memorial Academy, 2020</li>
+          <li>Senior High School, Our Lady of Fatima University, 2022</li>
+          <li>College, University of the East (Currently studying, BS Information Technology)</li>
+        </ol>
+      </div>
 
       <div class="section">
-        <h2>Skills, Training, Seminars Attended</h2>
-        <h3>Skills:</h3>
+        <h2>Certifications & Achievements</h2>
+        <ul>
+          <li>Certificate of Participation – Cybersecurity Awareness Seminar (2024)</li>
+          <li>Certificate of Completion – Basic HTML & CSS Workshop (2023)</li>
+          <li>Dean’s Lister – 1st Year, University of the East (2023–2024)</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Skills, Training, and Seminars Attended</h2>
+        <h3>Soft Skills:</h3>
         <ul>
           <li>Communication</li>
-          <li>Teamwork/Collaboration</li>
+          <li>Teamwork & Collaboration</li>
           <li>Problem-Solving</li>
           <li>Time Management</li>
           <li>Organization</li>
           <li>Adaptability</li>
           <li>Critical Thinking</li>
         </ul>
+
         <h3>Seminars Attended:</h3>
         <ul>
           <li>Forex Trading Seminar</li>
-          <li>CyberSecurity Seminar</li>
+          <li>Cybersecurity Seminar</li>
+          <li>Digital Literacy & Data Privacy Orientation</li>
         </ul>
       </div>
 
       <div class="section">
-        <h2>Hobbies/Interests</h2>
+        <h2>Personal Information</h2>
+        <ul>
+          <li><strong>Date of Birth:</strong> July 23, 2003</li>
+          <li><strong>Age:</strong> 22</li>
+          <li><strong>Sex:</strong> Male</li>
+          <li><strong>Nationality:</strong> Filipino</li>
+          <li><strong>Religion:</strong> Roman Catholic</li>
+          <li><strong>Civil Status:</strong> Single</li>
+          <li><strong>Languages Spoken:</strong> English, Filipino</li>
+          <li><strong>Address:</strong> Quezon City, Philippines</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Hobbies & Interests</h2>
         <ul class="hobbies-list">
           <li>Gaming</li>
           <li>Video Editing</li>
           <li>PC Building</li>
+          <li>Web Design</li>
+          <li>Photography</li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Character References</h2>
+        <ul>
+          <li>
+            <strong>Prof. Maria Lopez</strong> – IT Department, University of the East <br />
+            Email: mlopez@ue.edu.ph | Contact: 0917-123-4567
+          </li>
+          <li>
+            <strong>Mr. John Santos</strong> – Manager, McDonald’s <br />
+            Contact: 0918-765-4321
+          </li>
         </ul>
       </div>
     </div>
