--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -16,7 +16,6 @@
           <h1>Valencia, Yancy Jarell D.</h1>
           <div class="contact-info">
             <p>09763866616 | Valencia.YancyJarell@ue.edu.ph</p>
-            <p>LinkedIn: linkedin.com/in/yancyvalencia | GitHub: github.com/yancyvalencia</p>
           </div>
         </div>
       </div>
@@ -88,7 +87,7 @@
         <ul>
           <li>Certificate of Participation – Cybersecurity Awareness Seminar (2024)</li>
           <li>Certificate of Completion – Basic HTML & CSS Workshop (2023)</li>
-          <li>Dean’s Lister – 1st Year, University of the East (2023–2024)</li>
+          <li>Dean’s Lister – 1st Year, University of the East (2023)</li>
         </ul>
       </div>
 
@@ -116,14 +115,14 @@
       <div class="section">
         <h2>Personal Information</h2>
         <ul>
-          <li><strong>Date of Birth:</strong> July 23, 2003</li>
-          <li><strong>Age:</strong> 22</li>
+          <li><strong>Date of Birth:</strong> May 6, 2005</li>
+          <li><strong>Age:</strong> 20</li>
           <li><strong>Sex:</strong> Male</li>
           <li><strong>Nationality:</strong> Filipino</li>
           <li><strong>Religion:</strong> Roman Catholic</li>
           <li><strong>Civil Status:</strong> Single</li>
           <li><strong>Languages Spoken:</strong> English, Filipino</li>
-          <li><strong>Address:</strong> Quezon City, Philippines</li>
+          <li><strong>Address:</strong> Antipolo City, Philippines</li>
         </ul>
       </div>
 
@@ -143,11 +142,9 @@
         <ul>
           <li>
             <strong>Prof. Maria Lopez</strong> – IT Department, University of the East <br />
-            Email: mlopez@ue.edu.ph | Contact: 0917-123-4567
           </li>
           <li>
             <strong>Mr. John Santos</strong> – Manager, McDonald’s <br />
-            Contact: 0918-765-4321
           </li>
         </ul>
       </div>
